--- a/index.Rmd
+++ b/index.Rmd
@@ -28,9 +28,9 @@ french_address: |
 phone: "(555) 555-5555"
 author_footnote: "Email: John.Cristiani@dfo-mpo.gc.ca | telephone: (250) 756-5555"
 abstract: |
-  Coastal marine ecosystems face threats from various marine and terrestrial human activities. Shoreline modifications that result from these activities can significantly impact the health and functioning of coastal biogenic habitats, including seagrass meadows. Understanding the presence and extent of shoreline modifications adjacent to seagrass meadows is therefore crucial for assessing potential human impacts to seagrass ecosystems. This technical report aims to map, characterize, and quantify shoreline modifications adjacent to known eelgrass (*Zostera marina*) meadows in the Strait of Georgia Bioregion of British Columbia. Using aerial imagery and a spatial dataset of seagrass distribution compiled from various sources, we digitized shoreline modifications within 100 meters of the coastline adjacent to each seagrass meadow. We focused on structures and areas that have been de-vegetated and altered from their natural state. We characterized modifications into six categories (road, residential, industrial, agriculture, greenspace, unclear), and we recorded additional descriptions for each category (e.g. road: paved). We found that the median percent of modified shoreline area was 9%. Of the 685 meadows analyzed 19% had no modifications, and 9% were more than 50% modified. The dominant modification type across the study area was residential development. The resulting dataset provides valuable information for assessing land use patterns and predicting potential impacts to nearshore ecosystems. Future efforts should continue to add to and refine the shoreline modification dataset as seagrass spatial datasets are updated. This study highlights the importance of managing seagrass within its broader seascape and landscape context, and it emphasizes the need for ongoing data collection and analysis to inform effective seagrass management strategies.
+    Coastal marine ecosystems face threats from various marine and terrestrial human activities. Shoreline modifications that result from these activities can significantly impact the health and functioning of coastal biogenic habitats, including seagrass meadows. Quantifying the extent of shoreline modifications adjacent to seagrass meadows is therefore crucial for assessing potential human impacts to seagrass ecosystems. Here, we map, characterize, and quantify shoreline modifications adjacent to eelgrass (*Zostera marina*) meadows in the Strait of Georgia Bioregion. Using aerial imagery and a spatial dataset of seagrass distribution, we digitized shoreline modifications within 100 meters inland of each seagrass meadow. We focused on areas that have been de-vegetated and altered from their natural state. We characterized modifications into six categories (road, residential, industrial, agriculture, greenspace, unclear). The median percent of modified shoreline area was 9%. Of the 685 meadows analyzed 19% had no modifications, and 9% were more than 50% modified. The dominant modification type was residential development. The resulting dataset provides valuable information for assessing land-use patterns and predicting impacts to nearshore ecosystems. This study highlights the importance of managing seagrass within its broader landscape context, and it emphasizes the need for ongoing data collection and analysis to inform effective seagrass management strategies.
 french_abstract: |
-  Les écosystèmes marins côtiers sont menacés par diverses activités humaines marines et terrestres. Les modifications du littoral résultant de ces activités peuvent avoir une incidence significative sur la santé et le fonctionnement des habitats biogéniques côtiers, y compris les herbiers marins. Il est donc essentiel de comprendre la présence et l’étendue des modifications du littoral à proximité des herbiers marins pour évaluer les répercussions potentielles de l’humain sur les écosystèmes d’herbiers marins. Ce rapport technique vise à cartographier, caractériser et quantifier les modifications du littoral à proximité d’herbiers connus de zostère (Zostera marina) dans la biorégion du détroit de Georgia, en Colombie-Britannique. À l’aide d’images aériennes et d’un ensemble de données spatiales sur la répartition des herbiers marins compilées à partir de diverses sources, nous avons numérisé les modifications du littoral dans un rayon de 100 mètres de la côte adjacente à chaque herbier marin. Nous nous sommes concentrés sur les structures et les zones qui ont été dévégétalisées et modifiées par rapport à leur état naturel. Nous avons classé les modifications en six catégories (route, milieu résidentiel, milieu industriel, milieu agricole, espace vert, non défini) et nous avons enregistré des descriptions supplémentaires pour chaque catégorie (par exemple, route pavée). Nous avons constaté que le pourcentage médian de la superficie modifiée du littoral était de 9 %. Sur les 685 herbiers analysés, 19 % n’ont subi aucune modification et 9 % ont été modifiés à plus de 50 %. Le type de modification dominant dans la zone d’étude est le développement résidentiel. L’ensemble de données qui en a résulté fournit de l’information précieuse pour l’évaluation des schémas d’utilisation des sols et la prévision des répercussions potentielles sur les écosystèmes littoraux. Il faut continuer à compléter et à améliorer l’ensemble de données sur la modification du littoral à mesure que les ensembles de données spatiales sur les herbiers marins sont mis à jour. Cette étude met en évidence l’importance de la gestion des herbiers marins dans le contexte plus large du paysage marin et terrestre, et souligne la nécessité d’une collecte et d’une analyse continues des données afin d’élaborer des stratégies efficaces pour la gestion des herbiers marins.
+    Les écosystèmes marins côtiers sont menacés par diverses activités humaines marines et terrestres. Les modifications du littoral résultant de ces activités peuvent avoir une incidence significative sur la santé et le fonctionnement des habitats biogéniques côtiers, y compris les herbiers marins. Il est donc essentiel de quantifier l’étendue des modifications du littoral à proximité des herbiers marins pour évaluer les répercussions potentielles de l’humain sur les écosystèmes d’herbiers marins. Ici, nous cartographions, caractérisons et quantifions les modifications du littoral à proximité d’herbiers de zostère (*Zostera marina*) dans la biorégion du détroit de Georgia. À l’aide d’images aériennes et d’un ensemble de données spatiales sur la répartition des herbiers marins, nous avons numérisé les modifications du littoral dans un rayon de 100 mètres de la côte adjacente à chaque herbier marin. Nous nous sommes concentrés sur les zones qui ont été dévégétalisées et modifiées par rapport à leur état naturel. Nous avons classé les modifications en six catégories (route, milieu résidentiel, milieu industriel, milieu agricole, espace vert, non défini). Le pourcentage médian de la superficie modifiée du littoral était de 9 %. Sur les 685 herbiers analysés, 19 % n’ont subi aucune modification et 9 % ont été modifiés à plus de 50 %. Le type de modification dominant est le développement résidentiel. L’ensemble de données qui en a résulté fournit de l’information précieuse pour l’évaluation des schémas d’utilisation des sols et la prévision des répercussions sur les écosystèmes littoraux. Cette étude met en évidence l’importance de la gestion des herbiers marins dans le contexte plus large du paysage terrestre, et souligne la nécessité d’une collecte et d’une analyse continues des données afin d’élaborer des stratégies efficaces pour la gestion des herbiers marins.
 output:
  csasdown::techreport_pdf:
    french: false
